Fixed centering alignments

--- a/src/pages/findFriends/findFriends.scss
+++ b/src/pages/findFriends/findFriends.scss
@@ -27,7 +27,7 @@ ion-card-content {
   height: 400px;
   box-shadow: 0px 1px 10px rgba(0,0,0,0.5);
   border-radius: 3px;
-  background-color: #1d779e;
+  background-color: #ffffff;
   font-weight: bold;
 }
 
