--- a/src/pages/myProfile/myProfile.scss
+++ b/src/pages/myProfile/myProfile.scss
@@ -1,9 +1,15 @@
-page-home {
+page-createdProfile {
 
-progress[value]::-webkit-progress-bar {
-  background-color: #eee;
-  border-radius: 2px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+ion-card-content {
+  position: absolute;
+  top: calc(50% - 150px);
+  left: calc(50% - 150px);
+  width: 300px;
+  height: 400px;
+  box-shadow: 0px 1px 10px rgba(0,0,0,0.5);
+  border-radius: 3px;
+  background-color: #ffffff;
+  font-weight: bold;
 }
 
 }
